force-app/main/default/objects/Product2/fields/Airtable_Id__c.field-meta.xml
<CustomField>
    <fullName>Airtable_Id__c</fullName>
    <externalId>true</externalId>
    <label>Airtable Id</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>