force-app/main/default/objects/Product2/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apparel</fullName>
            </value>
            <value>
                <fullName>Protective Gear</fullName>
            </value>
            <value>
                <fullName>Weapons &amp; Tools</fullName>
            </value>
            <value>
                <fullName>Belts</fullName>
            </value>
            <value>
                <fullName>Accessories</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>