force-app/main/default/objects/Product2/fields/Discipline__c.field-meta.xml
<CustomField>
    <fullName>Discipline__c</fullName>
    <label>Discipline</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BJJ</fullName>
            </value>
            <value>
                <fullName>Judo</fullName>
            </value>
            <value>
                <fullName>Karate</fullName>
            </value>
            <value>
                <fullName>Taekwondo</fullName>
            </value>
            <value>
                <fullName>Boxing</fullName>
            </value>
            <value>
                <fullName>MMA</fullName>
            </value>
            <value>
                <fullName>Muay Thai</fullName>
            </value>
            <value>
                <fullName>Kickboxing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>