force-app/main/default/objects/Product2/fields/Reference_Id__c.field-meta.xml
<CustomField>
    <fullName>Reference_Id__c</fullName>
    <externalId>true</externalId>
    <label>Reference Id</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>