force-app/main/default/objects/Product2/listViews/All_products.listView-meta.xml
<ListView>
    <fullName>All_products</fullName>
    <columns>Reference_Id__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>Category__c</columns>
    <columns>Color__c</columns>
    <columns>Discipline__c</columns>
    <columns>Size__c</columns>
    <columns>PRODUCT2.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All products</label>
</ListView>